syntax="proto3";

package services;

option go_package="grpc/pbfiles";

import "google/api/annotations.proto";
import "model/order.proto";

message OrderRequest {
  model.Order order = 1;
}

message OrderResponse {
  string status = 1;
  string message = 2;
}

service OrderService {
  rpc NewOrder(OrderRequest) returns (OrderResponse) {
    option (google.api.http)={
      post: "/v1/orders"
      body: "order"
    };
  }
}